replaced background Adjusted spacing in hero and set heading to fixed
I also need to make the hero responsive. so I duplicated the woman-img into the media query

--- a/style.css
+++ b/style.css
@@ -18,7 +18,6 @@ body {
     flex-direction: column;
     align-items: center;
     width: 100%;
-    
     margin: 0;
     padding: 0;
 }
@@ -33,9 +32,9 @@ body {
     justify-content: space-between;
     top: 0;
     left: 0;
-    /* position: fixed; */
+    position: fixed;
     color: white;
-    z-index: 2;
+    z-index: 3;
 }
 
 .header h3 {
@@ -107,7 +106,7 @@ h5 {
 }
 
 .title {
-    background-image: url(./images/background\ \(1\).png);
+    background-image: url(./images/background.jpg);
     background-repeat: no-repeat;
     background-color: #EB5F0A;
     background-position: top;
@@ -115,10 +114,8 @@ h5 {
     position:relative;
     width: 100%;
     height: 500px;
-    
+    padding-top: 40px;
     color: white;
-    
-   
     box-shadow: 0 0 5px gray;
   
 }
@@ -203,7 +200,7 @@ h5 {
 
 @media screen and (max-width: 850px) {
     .title {
-        background-image:url(./images/wwhna-logo-square-orange.png);
+        background-image: none;
         background-color: #EB5F0A;
         background-size: contain;
         padding-bottom: 25%;
@@ -211,7 +208,29 @@ h5 {
     .order-link{
         margin-top: 100%;
     }
-  
+
+    .woman-img img:first-child {
+        position: absolute;
+        bottom: 0;
+        left: 3%;
+        width: 25%;
+        z-index: 2;
+    }
+    
+    .woman-img img:nth-child(2) {
+        position: absolute;
+        bottom: 18%;
+        left: 10%;
+        width: 25%;
+        z-index: 1;
+    }
+    
+    .woman-img img:nth-child(3) {
+        position: absolute;
+        bottom: 0;
+        left: 17%;
+        width: 25%;
+        z-index: 3;
 
 }
 
